--- a/index.html
+++ b/index.html
@@ -7,23 +7,32 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<div class="logo-container">
-					<h1>FPC Code</h1>
-				</div>
-
-				<ul class="nav-links">
-					<li><a href="" class="nav-link">Home</a></li>
-					<li><a href="" class="nav-link">About</a></li>
-					<li><a href="" class="nav-link">Services</a></li>
-					<li><a href="" class="nav-link">Join</a></li>
-					<li><a href="" class="nav-link">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
 		<div class="home-page-banner">
-			<img src="home_banner.jpeg" alt="" />
+			<header>
+				<nav>
+					<div class="logo-container">
+						<h1>FPC Code</h1>
+					</div>
+
+					<ul class="nav-links">
+						<li><a href="#" class="nav-link">Home</a></li>
+						<li><a href="#" class="nav-link">About</a></li>
+						<li><a href="#" class="nav-link">Services</a></li>
+						<li><a href="#" class="nav-link">Join</a></li>
+						<li><a href="#" class="nav-link">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+			<img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
+			<div class="home-page-banner-content">
+				<div class="home-page-banner-text">
+					<h1>Welcome to FPC Code</h1>
+					<p>Make A Website. Get A Website.</p>
+				</div>
+				<div class="home-page-banner-button">
+					<button>Join Now</button>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
