--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div class="home-page-banner">
+			<img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
 			<header>
 				<nav>
 					<div class="logo-container">
@@ -21,9 +22,14 @@
 						<li><a href="#" class="nav-link">Join</a></li>
 						<li><a href="#" class="nav-link">Contact</a></li>
 					</ul>
+
+					<div class="burger">
+						<div class="line1"></div>
+						<div class="line2"></div>
+						<div class="line3"></div>
+					</div>
 				</nav>
 			</header>
-			<img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
 			<div class="home-page-banner-content">
 				<div class="home-page-banner-text">
 					<h1>Welcome to FPC Code</h1>
@@ -35,4 +41,6 @@
 			</div>
 		</div>
 	</body>
+	<footer></footer>
+	<script src="script.js"></script>
 </html>
