--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 				</div>
 			</div>
 		</div>
+
+		<div id="learn">
+			<h1>Learn</h1>
+		</div>
+
+		<div id="web-design"></div>
 	</body>
 	<footer></footer>
 	<script src="script.js"></script>
