Page Banner Adjustments

--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
 			</header>
 			<div class="home-page-banner-content">
 				<div class="home-page-banner-text">
-					<h1>Welcome to FPC Code</h1>
-					<p>Make A Website. Get A Website.</p>
+					<div class="small-text">
+						<h1>Welcome to</h1>
+						<h1>FPC Code</h1>
+					</div>
+					<div class="large-text">
+						<h1>Welcome to FPC Code</h1>
+					</div>
+					<div class="sub-title">
+						<p>Make A Website. Get A Website.</p>
+					</div>
 				</div>
 				<div class="home-page-banner-button">
 					<button>Join Now</button>
