--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 			</div>
 		</div>
 
-		<div id="learn">
-			<h1>Learn</h1>
+		<div id="learn" class="main-content">
+			<h1>Learn to Design and Develop</h1>
+			<h2>Your Own Website</h2>
 		</div>
 
-		<div id="web-design"></div>
+		<div id="web-design" class="main-content"></div>
 	</body>
 	<footer></footer>
 	<script src="script.js"></script>
