Main Content Changes

--- a/index.html
+++ b/index.html
@@ -49,9 +49,20 @@
 			</div>
 		</div>
 
-		<div id="learn" class="main-content">
-			<h1>Learn to Design and Develop</h1>
-			<h2>Your Own Website</h2>
+		<div id="learn" class="main-content-container">
+			<div class="main-content">
+				<h1>Learn to Design and Develop</h1>
+				<h2>Your Own Website</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+					incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
+					volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus mattis rhoncus
+					urna neque viverra justo.
+				</p>
+			</div>
+			<div class="main-content-image">
+				<img src="learn-1.jpeg" alt="" />
+			</div>
 		</div>
 
 		<div id="web-design" class="main-content"></div>
