Main Content Adjustments

--- a/index.html
+++ b/index.html
@@ -61,11 +61,25 @@
 				</p>
 			</div>
 			<div class="main-content-image">
-				<img src="learn-1.jpeg" alt="" />
+				<img src="learn_1.jpeg" alt="" />
 			</div>
 		</div>
 
-		<div id="web-design" class="main-content"></div>
+		<div id="web-design" class="main-content-container">
+			<div class="main-content">
+				<h1>Get Yourself a Website</h1>
+				<h2>Made by Us</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+					incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
+					volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus mattis rhoncus
+					urna neque viverra justo.
+				</p>
+			</div>
+			<div class="main-content-image">
+				<img src="web_design_1.jpeg" alt="" />
+			</div>
+		</div>
 	</body>
 	<footer></footer>
 	<script src="script.js"></script>
