--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 
 		<div id="learn" class="main-content-container">
 			<div class="main-content">
-				<h1>Learn to Design and Develop</h1>
-				<h2>Your Own Website</h2>
+				<div class="main-content-header">
+					<h1>Learn to Design and Develop</h1>
+					<h2>Your Own Website</h2>
+				</div>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 					incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
@@ -67,8 +69,10 @@
 
 		<div id="web-design" class="main-content-container">
 			<div class="main-content">
-				<h1>Get Yourself a Website</h1>
-				<h2>Made by Us</h2>
+				<div class="main-content-header">
+					<h1>Get Yourself a Website</h1>
+					<h2>Made by Us</h2>
+				</div>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 					incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
