--- a/index.html
+++ b/index.html
@@ -1,90 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
-		<title>Document</title>
-	</head>
-	<body>
-		<div class="home-page-banner">
-			<img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
-			<header>
-				<nav>
-					<div class="logo-container">
-						<h1>FPC Code</h1>
-					</div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="home-page-banner">
+            <img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
+            <header>
+                <nav>
+                    <div class="logo-container">
+                        <h1>FPC Code</h1>
+                    </div>
 
-					<ul class="nav-links">
-						<li><a href="#" class="nav-link">Home</a></li>
-						<li><a href="#" class="nav-link">About</a></li>
-						<li><a href="#" class="nav-link">Services</a></li>
-						<li><a href="#" class="nav-link">Join</a></li>
-						<li><a href="#" class="nav-link">Contact</a></li>
-					</ul>
+                    <ul class="nav-links">
+                        <li><a href="#" class="nav-link">Home</a></li>
+                        <li><a href="#" class="nav-link">About</a></li>
+                        <li><a href="#" class="nav-link">Services</a></li>
+                        <li><a href="#" class="nav-link">Join</a></li>
+                        <li><a href="#" class="nav-link">Contact</a></li>
+                    </ul>
 
-					<div class="burger">
-						<div class="line1"></div>
-						<div class="line2"></div>
-						<div class="line3"></div>
-					</div>
-				</nav>
-			</header>
-			<div class="home-page-banner-content">
-				<div class="home-page-banner-text">
-					<div class="small-text">
-						<h1>Welcome to</h1>
-						<h1>FPC Code</h1>
-					</div>
-					<div class="large-text">
-						<h1>Welcome to FPC Code</h1>
-					</div>
-					<div class="sub-title">
-						<p>Make A Website. Get A Website.</p>
-					</div>
-				</div>
-				<div class="home-page-banner-button">
-					<button>Join Now</button>
-				</div>
-			</div>
-		</div>
+                    <div class="burger">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
+                </nav>
+            </header>
+            <div class="home-page-banner-content">
+                <div class="home-page-banner-text">
+                    <div class="small-text">
+                        <h1>Welcome to</h1>
+                        <h1>FPC Code</h1>
+                    </div>
+                    <div class="large-text">
+                        <h1>Welcome to FPC Code</h1>
+                    </div>
+                    <div class="sub-title">
+                        <p>Make A Website. Get A Website.</p>
+                    </div>
+                </div>
+                <div class="home-page-banner-button">
+                    <button>Join Now</button>
+                </div>
+            </div>
+        </div>
 
-		<div id="learn" class="main-content-container">
-			<div class="main-content">
-				<div class="main-content-header">
-					<h1>Learn to Design and Develop</h1>
-					<h2>Your Own Website</h2>
-				</div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-					incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
-					volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus mattis rhoncus
-					urna neque viverra justo.
-				</p>
-			</div>
-			<div class="main-content-image">
-				<img src="learn_1.jpeg" alt="" />
-			</div>
-		</div>
+        <div id="learn" class="main-content-container">
+            <div class="main-content">
+                <div class="main-content-header">
+                    <h1>Learn to Design and Develop</h1>
+                    <h2>Your Own Website</h2>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
+                    volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus mattis rhoncus
+                    urna neque viverra justo.
+                </p>
+            </div>
+            <div class="main-content-button">
+                <button>Start Learing</button>
+            </div>
+            <div class="main-content-image">
+                <img src="learn_1.jpeg" alt="" />
+            </div>
+        </div>
 
-		<div id="web-design" class="main-content-container">
-			<div class="main-content">
-				<div class="main-content-header">
-					<h1>Get Yourself a Website</h1>
-					<h2>Made by Us</h2>
-				</div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-					incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
-					volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus mattis rhoncus
-					urna neque viverra justo.
-				</p>
-			</div>
-			<div class="main-content-image">
-				<img src="web_design_1.jpeg" alt="" />
-			</div>
-		</div>
-	</body>
-	<footer></footer>
-	<script src="script.js"></script>
+        <div id="web-design" class="main-content-container">
+            <div class="main-content">
+                <div class="main-content-header">
+                    <h1>Get Yourself a Website</h1>
+                    <h2>Made by Us</h2>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit
+                    volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus mattis rhoncus
+                    urna neque viverra justo.
+                </p>
+            </div>
+            <div class="main-content-button">
+                <button>Get A Website</button>
+            </div>
+            <div class="main-content-image">
+                <img src="web_design_1.jpeg" alt="" />
+            </div>
+        </div>
+    </body>
+    <footer></footer>
+    <script src="script.js"></script>
 </html>
