Added Text to Images

--- a/index.html
+++ b/index.html
@@ -96,14 +96,23 @@
                 <h1>Projects</h1>
             </div>
             <ul id="projects">
-                <li class="project">
+                <li id="project-1" class="project">
                     <img src="mu_alpha_theta_icon.jpeg" alt="" />
+                    <div class="project-header">
+                        <h1>Mu Alpha Theta</h1>
+                    </div>
                 </li>
-                <li class="project">
+                <li id="project-2" class="project">
                     <img src="model_un_icon.jpeg" alt="" />
+                    <div class="project-header">
+                        <h1>Model United Nations</h1>
+                    </div>
                 </li>
-                <li class="project">
+                <li id="project-3" class="project">
                     <img src="lead_icon.jpeg" alt="" />
+                    <div class="project-header">
+                        <h1>L.E.A.D.</h1>
+                    </div>
                 </li>
             </ul>
         </div>
