Made Project Icons Responove

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     </div>
 
                     <ul class="nav-links">
-                        <li><a href="#" class="nav-link">Home</a></li>
+                        <li><a href="/" class="nav-link">Home</a></li>
                         <li><a href="#" class="nav-link">About</a></li>
                         <li><a href="#" class="nav-link">Services</a></li>
                         <li><a href="#" class="nav-link">Join</a></li>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="home-page-banner-button">
-                    <button>Join Now</button>
+                    <button onclick="redirect('#')">Join Now</button>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="main-content-button">
-                <button>Start Learing</button>
+                <button onclick="redirect('#')">Start Learning</button>
             </div>
             <div class="main-content-image">
                 <img src="learn_1.jpeg" alt="" />
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="main-content-button">
-                <button>Get A Website</button>
+                <button onclick="redirect('#')">Get A Website</button>
             </div>
             <div class="main-content-image">
                 <img src="web_design_1.jpeg" alt="" />
@@ -97,22 +97,52 @@
             </div>
             <ul id="projects">
                 <li id="project-1" class="project">
-                    <img src="mu_alpha_theta_icon.jpeg" alt="" />
-                    <div class="project-header">
-                        <h3>Mu Alpha Theta</h3>
-                    </div>
+                    <a href="#">
+                        <img src="mu_alpha_theta_icon.jpeg" alt="" />
+                        <div class="project-content">
+                            <div class="project-header">
+                                <h3>Mu Alpha Theta</h3>
+                            </div>
+                            <div class="project-information">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
                 </li>
                 <li id="project-2" class="project">
-                    <img src="model_un_icon.jpeg" alt="" />
-                    <div class="project-header">
-                        <h3>Model United Nations</h3>
-                    </div>
+                    <a href="#">
+                        <img src="model_un_icon.jpeg" alt="" />
+                        <div class="project-content">
+                            <div class="project-header">
+                                <h3>Model UN</h3>
+                            </div>
+                            <div class="project-information">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
                 </li>
                 <li id="project-3" class="project">
-                    <img src="lead_icon.jpeg" alt="" />
-                    <div class="project-header">
-                        <h3>L.E.A.D.</h3>
-                    </div>
+                    <a href="#">
+                        <img src="lead_icon.jpeg" alt="" />
+                        <div class="project-content">
+                            <div class="project-header">
+                                <h3>L.E.A.D.</h3>
+                            </div>
+                            <div class="project-information">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </div>
