Added View All Button

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
                     </a>
                 </li>
             </ul>
+            <div id="project-highlights-button">
+                <button onclick="redirect('#')">View All</button>
+            </div>
         </div>
     </body>
     <footer></footer>
