--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
                     <ul class="nav-links">
                         <li><a href="/" class="nav-link">Home</a></li>
-                        <li><a href="#" class="nav-link">About</a></li>
-                        <li><a href="#" class="nav-link">Services</a></li>
                         <li><a href="#" class="nav-link">Join</a></li>
+                        <li><a href="#" class="nav-link">Services</a></li>
+                        <li><a href="#" class="nav-link">About</a></li>
                         <li><a href="#" class="nav-link">Contact</a></li>
                     </ul>
 
@@ -150,6 +150,26 @@
             </div>
         </div>
     </body>
-    <footer></footer>
+    <footer>
+        <ul class="footer-nav-links">
+            <li><a href="/" class="footer-nav-link">Home</a></li>
+            <li><a href="#" class="footer-nav-link">Join</a></li>
+            <li>
+                <a href="#" class="footer-nav-link">Services</a>
+                <ul class="footer-sub-nav-links">
+                    <li><a href="#" class="footer-sub-nav-link">Learning</a></li>
+                    <li><a href="#" class="footer-sub-nav-link">Websites</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#" class="footer-nav-link">About</a>
+                <ul class="footer-sub-nav-links">
+                    <li><a href="" class="footer-sub-nav-link">Projects</a></li>
+                    <li><a href="" class="footer-sub-nav-link">Officers</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="footer-nav-link">Contact</a></li>
+        </ul>
+    </footer>
     <script src="script.js"></script>
 </html>
