--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
             <li><a href="#" class="footer-nav-link">Join</a></li>
             <li>
                 <a href="#" class="footer-nav-link">Services</a>
-                <ul class="footer-sub-nav-links">
+                <!-- <ul class="footer-sub-nav-links">
                     <li><a href="#" class="footer-sub-nav-link">Learning</a></li>
                     <li><a href="#" class="footer-sub-nav-link">Websites</a></li>
-                </ul>
+                </ul> -->
             </li>
             <li>
                 <a href="#" class="footer-nav-link">About</a>
-                <ul class="footer-sub-nav-links">
+                <!-- <ul class="footer-sub-nav-links">
                     <li><a href="" class="footer-sub-nav-link">Projects</a></li>
                     <li><a href="" class="footer-sub-nav-link">Officers</a></li>
-                </ul>
+                </ul> -->
             </li>
             <li><a href="#" class="footer-nav-link">Contact</a></li>
         </ul>
