--- a/index.html
+++ b/index.html
@@ -1,175 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="home-page-banner">
-            <img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
-            <header>
-                <nav>
-                    <div class="logo-container">
-                        <h1>FPC Code</h1>
-                    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="home-page-banner">
+			<img class="home-page-banner-image" src="home_banner.jpeg" alt="" />
+			<header>
+				<nav>
+					<div class="logo-container">
+						<h1>FPC Code</h1>
+					</div>
 
-                    <ul class="nav-links">
-                        <li><a href="/" class="nav-link">Home</a></li>
-                        <li><a href="#" class="nav-link">Join</a></li>
-                        <li><a href="#" class="nav-link">Services</a></li>
-                        <li><a href="#" class="nav-link">About</a></li>
-                        <li><a href="#" class="nav-link">Contact</a></li>
-                    </ul>
+					<ul class="nav-links">
+						<li><a href="/" class="nav-link">Home</a></li>
+						<li><a href="#" class="nav-link">Join</a></li>
+						<li><a href="#" class="nav-link">Services</a></li>
+						<li><a href="#" class="nav-link">About</a></li>
+						<li><a href="#" class="nav-link">Contact</a></li>
+					</ul>
 
-                    <div class="burger">
-                        <div class="line1"></div>
-                        <div class="line2"></div>
-                        <div class="line3"></div>
-                    </div>
-                </nav>
-            </header>
-            <div class="home-page-banner-content">
-                <div class="home-page-banner-text">
-                    <div class="small-text">
-                        <h1>Welcome to</h1>
-                        <h1>FPC Code</h1>
-                    </div>
-                    <div class="large-text">
-                        <h1>Welcome to FPC Code</h1>
-                    </div>
-                    <div class="sub-title">
-                        <p>Make A Website. Get A Website.</p>
-                    </div>
-                </div>
-                <div class="home-page-banner-button">
-                    <button onclick="redirect('#')">Join Now</button>
-                </div>
-            </div>
-        </div>
+					<div class="burger">
+						<div class="line1"></div>
+						<div class="line2"></div>
+						<div class="line3"></div>
+					</div>
+				</nav>
+			</header>
+			<div class="home-page-banner-content">
+				<div class="home-page-banner-text">
+					<div class="small-text">
+						<h1>Welcome to</h1>
+						<h1>FPC Code</h1>
+					</div>
+					<div class="large-text">
+						<h1>Welcome to FPC Code</h1>
+					</div>
+					<div class="sub-title">
+						<p>Make A Website. Get A Website.</p>
+					</div>
+				</div>
+				<div class="home-page-banner-button">
+					<button onclick="redirect('#')">Join Now</button>
+				</div>
+			</div>
+		</div>
 
-        <div id="learn" class="main-content-container">
-            <div class="main-content">
-                <div class="main-content-text">
-                    <h1>Learn to Design and Develop</h1>
-                    <h2>Your Own Website</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim
-                        blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
-                        mattis rhoncus urna neque viverra justo.
-                    </p>
-                </div>
-            </div>
-            <div class="main-content-button">
-                <button onclick="redirect('#')">Start Learning</button>
-            </div>
-            <div class="main-content-image">
-                <img src="learn_1.jpeg" alt="" />
-            </div>
-        </div>
+		<div id="learn" class="main-content-container">
+			<div class="main-content">
+				<div class="main-content-text">
+					<h1>Learn to Design and Develop</h1>
+					<h2>Your Own Website</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim
+						blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
+						mattis rhoncus urna neque viverra justo.
+					</p>
+				</div>
+			</div>
+			<div class="main-content-button">
+				<button onclick="redirect('#')">Start Learning</button>
+			</div>
+			<div class="main-content-image">
+				<img src="learn_1.jpeg" alt="" />
+			</div>
+		</div>
 
-        <div id="web-design" class="main-content-container">
-            <div class="main-content">
-                <div class="main-content-text">
-                    <h1>Get Yourself a Website</h1>
-                    <h2>Made by Us</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim
-                        blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
-                        mattis rhoncus urna neque viverra justo.
-                    </p>
-                </div>
-            </div>
-            <div class="main-content-button">
-                <button onclick="redirect('#')">Get A Website</button>
-            </div>
-            <div class="main-content-image">
-                <img src="web_design_1.jpeg" alt="" />
-            </div>
-        </div>
+		<div id="web-design" class="main-content-container">
+			<div class="main-content">
+				<div class="main-content-text">
+					<h1>Get Yourself a Website</h1>
+					<h2>Made by Us</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim
+						blandit volutpat maecenas volutpat blandit aliquam. Sagittis nisl rhoncus
+						mattis rhoncus urna neque viverra justo.
+					</p>
+				</div>
+			</div>
+			<div class="main-content-button">
+				<button onclick="redirect('#')">Get A Website</button>
+			</div>
+			<div class="main-content-image">
+				<img src="web_design_1.jpeg" alt="" />
+			</div>
+		</div>
 
-        <div id="project-highlights">
-            <div id="project-highlights-header">
-                <h1>Projects</h1>
-            </div>
-            <ul id="projects">
-                <li id="project-1" class="project">
-                    <a href="#">
-                        <img src="mu_alpha_theta_icon.jpeg" alt="" />
-                        <div class="project-content">
-                            <div class="project-header">
-                                <h3>Mu Alpha Theta</h3>
-                            </div>
-                            <div class="project-information">
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li id="project-2" class="project">
-                    <a href="#">
-                        <img src="model_un_icon.jpeg" alt="" />
-                        <div class="project-content">
-                            <div class="project-header">
-                                <h3>Model UN</h3>
-                            </div>
-                            <div class="project-information">
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li id="project-3" class="project">
-                    <a href="#">
-                        <img src="lead_icon.jpeg" alt="" />
-                        <div class="project-content">
-                            <div class="project-header">
-                                <h3>L.E.A.D.</h3>
-                            </div>
-                            <div class="project-information">
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-            <div id="project-highlights-button">
-                <button onclick="redirect('#')">View All</button>
-            </div>
-        </div>
-    </body>
-    <footer>
-        <ul class="footer-nav-links">
-            <li><a href="/" class="footer-nav-link">Home</a></li>
-            <li><a href="#" class="footer-nav-link">Join</a></li>
-            <li>
-                <a href="#" class="footer-nav-link">Services</a>
-                <!-- <ul class="footer-sub-nav-links">
-                    <li><a href="#" class="footer-sub-nav-link">Learning</a></li>
-                    <li><a href="#" class="footer-sub-nav-link">Websites</a></li>
-                </ul> -->
-            </li>
-            <li>
-                <a href="#" class="footer-nav-link">About</a>
-                <!-- <ul class="footer-sub-nav-links">
-                    <li><a href="" class="footer-sub-nav-link">Projects</a></li>
-                    <li><a href="" class="footer-sub-nav-link">Officers</a></li>
-                </ul> -->
-            </li>
-            <li><a href="#" class="footer-nav-link">Contact</a></li>
-        </ul>
-    </footer>
-    <script src="script.js"></script>
+		<div id="project-highlights">
+			<div id="project-highlights-header">
+				<h1>Projects</h1>
+			</div>
+			<ul id="projects">
+				<li id="project-1" class="project">
+					<a href="#">
+						<img src="mu_alpha_theta_icon.jpeg" alt="" />
+						<div class="project-content">
+							<div class="project-header">
+								<h3>Mu Alpha Theta</h3>
+							</div>
+							<div class="project-information">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+									eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li id="project-2" class="project">
+					<a href="#">
+						<img src="model_un_icon.jpeg" alt="" />
+						<div class="project-content">
+							<div class="project-header">
+								<h3>Model UN</h3>
+							</div>
+							<div class="project-information">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+									eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li id="project-3" class="project">
+					<a href="#">
+						<img src="lead_icon.jpeg" alt="" />
+						<div class="project-content">
+							<div class="project-header">
+								<h3>L.E.A.D.</h3>
+							</div>
+							<div class="project-information">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+									eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+						</div>
+					</a>
+				</li>
+			</ul>
+			<div id="project-highlights-button">
+				<button onclick="redirect('#')">View All</button>
+			</div>
+		</div>
+	</body>
+	<footer>
+		<ul class="footer-nav-links">
+			<li><a href="/" class="footer-nav-link">Home</a></li>
+			<div class="footer-nav-links-divider"></div>
+			<li><a href="#" class="footer-nav-link">Join</a></li>
+			<div class="footer-nav-links-divider"></div>
+			<li><a href="#" class="footer-nav-link">Services</a></li>
+			<div class="footer-nav-links-divider"></div>
+			<li><a href="#" class="footer-nav-link">About</a></li>
+			<div class="footer-nav-links-divider"></div>
+			<li><a href="#" class="footer-nav-link">Contact</a></li>
+		</ul>
+	</footer>
+	<script src="script.js"></script>
 </html>
