Added Footer Social Icons

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 		</div>
 	</body>
 	<footer>
+		<div class="footer-button">
+			<button onclick="redirect('#')">Join</button>
+		</div>
 		<ul class="footer-nav-links">
 			<li><a href="/" class="footer-nav-link">Home</a></li>
 			<div class="footer-nav-links-divider"></div>
@@ -161,6 +164,17 @@
 			<li><a href="#" class="footer-nav-link">About</a></li>
 			<div class="footer-nav-links-divider"></div>
 			<li><a href="#" class="footer-nav-link">Contact</a></li>
+		</ul>
+		<ul class="social-links">
+			<li>
+				<a href="#"><img src="twitter_icon.svg" alt=""/></a>
+			</li>
+			<li>
+				<a href="#"><img src="instagram_icon.svg" alt=""/></a>
+			</li>
+			<li>
+				<a href="#"><img src="youtube_icon.svg" alt=""/></a>
+			</li>
 		</ul>
 	</footer>
 	<script src="script.js"></script>
