--- a/index.html
+++ b/index.html
@@ -176,6 +176,14 @@
 				<a href="#"><img src="youtube_icon.svg" alt=""/></a>
 			</li>
 		</ul>
+		<div class="copyright">
+			<div class="copyright-title">
+				<p>FPC Code</p>
+			</div>
+			<div class="copyright-statement">
+				<p>&copy; Copyright 2020, FPC Code</p>
+			</div>
+		</div>
 	</footer>
 	<script src="script.js"></script>
 </html>
