Changed Project Background

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
 		</ul>
 		<ul class="social-links">
 			<li>
-				<a href="#"><img src="twitter_icon.svg" alt=""/></a>
+				<a href="https://twitter.com/"><img src="twitter_icon.svg" alt="" /></a>
 			</li>
 			<li>
-				<a href="#"><img src="instagram_icon.svg" alt=""/></a>
+				<a href="https://www.instagram.com/"><img src="instagram_icon.svg" alt="" /></a>
 			</li>
 			<li>
-				<a href="#"><img src="youtube_icon.svg" alt=""/></a>
+				<a href="https://www.youtube.com/"><img src="youtube_icon.svg" alt="" /></a>
 			</li>
 		</ul>
 		<div class="copyright">
