Changed Footer Social Links

--- a/index.html
+++ b/index.html
@@ -154,28 +154,40 @@
 		<div class="footer-button">
 			<button onclick="redirect('#')">Join</button>
 		</div>
-		<ul class="footer-nav-links">
-			<li><a href="/" class="footer-nav-link">Home</a></li>
-			<div class="footer-nav-links-divider"></div>
-			<li><a href="#" class="footer-nav-link">Join</a></li>
-			<div class="footer-nav-links-divider"></div>
-			<li><a href="#" class="footer-nav-link">Services</a></li>
-			<div class="footer-nav-links-divider"></div>
-			<li><a href="#" class="footer-nav-link">About</a></li>
-			<div class="footer-nav-links-divider"></div>
-			<li><a href="#" class="footer-nav-link">Contact</a></li>
-		</ul>
-		<ul class="social-links">
-			<li>
-				<a href="https://twitter.com/"><img src="twitter_icon.svg" alt="" /></a>
-			</li>
-			<li>
-				<a href="https://www.instagram.com/"><img src="instagram_icon.svg" alt="" /></a>
-			</li>
-			<li>
-				<a href="https://www.youtube.com/"><img src="youtube_icon.svg" alt="" /></a>
-			</li>
-		</ul>
+		<div class="footer-main-content">
+			<ul class="footer-nav-links">
+				<li><a href="/" class="footer-nav-link">Home</a></li>
+				<div class="footer-nav-links-divider"></div>
+				<li><a href="#" class="footer-nav-link">Join</a></li>
+				<div class="footer-nav-links-divider"></div>
+				<li><a href="#" class="footer-nav-link">Services</a></li>
+				<div class="footer-nav-links-divider"></div>
+				<li><a href="#" class="footer-nav-link">About</a></li>
+				<div class="footer-nav-links-divider"></div>
+				<li><a href="#" class="footer-nav-link">Contact</a></li>
+			</ul>
+			<ul class="social-links">
+				<li>
+					<a href="https://twitter.com/"><img src="twitter_icon.svg" alt="" /></a>
+				</li>
+				<div class="social-links-divider"></div>
+				<li>
+					<a href="https://www.instagram.com/"><img src="instagram_icon.svg" alt="" /></a>
+				</li>
+				<div class="social-links-divider"></div>
+				<li>
+					<a href="https://www.slack.com/"><img src="slack_icon.svg" alt="" /></a>
+				</li>
+				<div class="social-links-divider"></div>
+				<li>
+					<a href="https://www.reddit.com/"><img src="reddit_icon.svg" alt="" /></a>
+				</li>
+				<div class="social-links-divider"></div>
+				<li>
+					<a href="https://www.youtube.com/"><img src="youtube_icon.svg" alt="" /></a>
+				</li>
+			</ul>
+		</div>
 		<div class="copyright">
 			<div class="copyright-title">
 				<p>FPC Code</p>
