--- a/page.html
+++ b/page.html
@@ -87,6 +87,19 @@
 					</ul>
 				</div>
 			</div>
+			<div class="content-form">
+				<form action="">
+					<div class="content-form-section">
+						<label for="fname">First Name</label>
+						<input type="text" name="firstname" id="fname" />
+					</div>
+					<div class="content-form-section">
+						<label for="lname">Last Name</label>
+						<input type="text" name="lastname" id="lname" />
+					</div>
+				</form>
+				<div class="content-form-border"></div>
+			</div>
 		</div>
 	</body>
 	<footer>
